# Lightningfocus

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: args.rs  main.rs
