[package]
name = "lightningfocus"
version = "0.1.0"
edition = "2021"
description = "A command line Pomodoro timer written in Rust"
author = "gevhaz"
license = "GPLv3"

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
crossterm = "0.26.1"
libnotify = "1.0.3"
tui = "0.19.0"
tui-input = "0.7.0"
